fixed alignment

--- a/src/styles/AccountMenu.css
+++ b/src/styles/AccountMenu.css
@@ -77,7 +77,7 @@
   justify-content: center;
   width: 100%;
   height: 50px;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
 }
   
 .links {
